# convex

./: .gitignore  APP_SPEC.md  ARCHITECTURE_BRAINSTORM.md  CLAUDE.md  IMPLEMENTATION_PLAN.md  python-instruct.md  swift-instruct.md
backend/: Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: a1b2c3d4e5f6_add_bm25_indexes.py  b2c3d4e5f6a7_add_filter_json_to_collections.py  ddf7d4031241_initial_schema.py
backend/src/cortex/: __main__.py  bootstrap.py  settings.py
backend/src/cortex/application/: collection_service.py  document_service.py  entity_service.py  ingestion_service.py  search_service.py
backend/src/cortex/domain/: chunk.py  collection.py  document.py  entity.py  ports.py
backend/src/cortex/entrypoints/: app.py  collections.py  documents.py  entities.py  router.py  search.py  status.py
backend/src/cortex/infrastructure/: file_storage.py  logging.py  metrics_collector.py  processing_events.py
backend/src/cortex/schemas/: collection_schemas.py  (+4 more)
backend/tests/: test_bm25_inspect.py  test_chunker_inspect.py  test_docsearch_inspect.py  test_embedder_inspect.py  test_entity_api_inspect.py  test_graph_inspect.py  test_graph_search_inspect.py  test_hybrid_inspect.py  test_ingestion_inspect.py  test_ner_inspect.py  test_reranker_full_inspect.py  test_reranker_inspect.py  test_search_inspect.py
backend/tests/test_application/: test_document_service.py  test_entity_service.py  test_ingestion_service.py  test_logging.py  test_metrics.py  test_search_service.py
backend/tests/test_domain/: test_document.py
(+86 files in other folders)
