[project]
name = "cortex"
version = "0.1.0"
description = "Personal knowledge base with semantic search"
requires-python = ">=3.11"

dependencies = [
    # API framework
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "python-multipart>=0.0.9",
    "websockets>=13.0",

    # Database
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.30",
    "alembic>=1.14",
    "pgvector>=0.3",

    # Task queue
    "celery[redis]>=5.4",

    # Document parsing
    "docling>=2.0",
    "pymupdf>=1.24",
    "openpyxl>=3.1",
    "markdown-it-py[plugins]>=3.0",
    "python-docx>=1.1",

    # ML / NLP
    "chonkie[semantic]>=0.3",
    "gliner>=0.2",
    "mxbai-rerank>=0.1",
    "sentence-transformers>=2.7",
    "torch>=2.4",

    # HTTP client
    "httpx>=0.27",

    # Configuration
    "pydantic-settings>=2.5",

    # Utilities
    "pillow>=10.4",
    "python-magic>=0.4",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "pytest-cov>=5.0",
    "ruff>=0.7",
    "mypy>=1.12",
    "httpx>=0.27",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/cortex"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
target-version = "py311"
line-length = 100
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.mypy]
python_version = "3.11"
strict = true
